[package]
name = "exonum-auction"
publish = false
version = "0.0.0"
authors = ["Artem Mindrov"]
repository = "https://github.com/exonum/exonum"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
exonum = "0.9.0"
exonum-configuration = "0.9.0"
failure = "0.1.2"
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
pub-sub = "*"

[dev-dependencies]
exonum-testkit = "0.9.0"
rand = "=0.5.5"
pretty_assertions = "=0.5.1"
assert_matches = "1.2.0"
